--- a/style/style-mobile.css
+++ b/style/style-mobile.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Sansita+Swashed&family=Tangerine:wght@700&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Sansita+Swashed&family=Tangerine:wght@700&display=swap');
 
 :root {
     --cor0: #9CE4FD;
@@ -16,8 +16,8 @@
 }
 
 body {
-    background-image: url("../assets/fundo.png");
     overflow-x: hidden;
+    background-image: url("../assets/fundo.png");
 }
 
 header {
@@ -77,6 +77,7 @@ header > #cegonha{
 }
 
 main {
+    overflow-x: hidden;
     height: 100%;
     width: 100%;
     position: absolute;
@@ -111,10 +112,6 @@ section > #hospital {
 nav#caminho {
     height: 200px;
     margin-left: 200px;
-}
-
-a:hover img {
-    transform: scale(1.1);
 }
 
 #caminho1 {
@@ -183,123 +180,5 @@ article.conteudo > p {
     text-indent: 2em;
 }
 
-@media only screen and (max-width: 600px) {
-    body {
-        overflow-y: scroll ;
-    }
-
-    #menulateral {
-        display: block;
-        width: 100%;
-        height: 450px;
-        padding: 5px;
-        background-color: var(--cor2);
-    }
-    
-    #menulateral > a {
-        margin: 25px 0px;
-        padding: 8px;
-        background-color: var(--cor3);
-        text-decoration: none;
-        color: black;
-        overflow: hidden;
-    }
-
-    section > #gestante {
-        height: 100px;
-        position: absolute;
-        top: 400px;
-        left: 5%;
-    }
-
-    section > #cegonha {
-        height: 100px;
-        position: absolute;
-        left: 5%;
-        top: 20%;
-    }
-
-    section > #hospital {
-        height: 80px;
-        position: relative;
-        margin-left: 80%;
-        margin-top: 30px;
-    }
-
-    nav#caminho {
-        width: 100%;
-        height: 100%;
-        margin-left: 50px;
-    }
-
-    a.caminho > img:hover{
-        height: 80px;
-    }
-    
-    #caminho1 {
-        height: 70px;
-        margin-left: 20px;
-        margin-bottom: 20px;
-    }
-    
-    #caminho2 {
-        height: 70px;
-        margin-left: -50px;
-        margin-bottom: 70px;
-    }
-    
-    #caminho3 {
-        height: 70px;
-        margin-left: -100px;
-        margin-bottom: 140px;
-    }
-    
-    #caminho4 {
-        height: 70px;
-        margin-left: -50px;
-        margin-bottom: 190px;
-    }
-    
-    #caminho5 {
-        height: 70px;
-        margin-right: -80px;
-        margin-bottom: 240px;
-    }
-    
-    #caminho6 {
-        height: 70px;
-        margin-left: 29px;
-        margin-bottom: 290px;
-    }
-
-    #bb1 {
-        height: 80px;
-        position: absolute;
-        left: 80%;
-    }
-    
-    #bb2 {
-        height: 80px;
-        position: absolute;
-        left: 60%;
-    }
-
-    article.conteudo {
-        width: 70%;
-        background-color: white;
-        padding: 30px;
-        border-radius: 25px;
-        margin: auto;
-        margin-top: 40px;
-        text-align: center;
-    }
-
-    section {
-        width: 100%;
-        position: absolute; 
-        display: inline;
-        overflow: scroll;
-    }
-}
-
+*/
 
