--- a/style/style.css
+++ b/style/style.css
@@ -187,14 +187,14 @@ article.conteudo > p {
     text-indent: 2em;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 500px) {
     body {
         overflow-y: scroll ;
     }
 
     #menulateral {
         display: block;
-        width: 97.5%;
+        width: 100%;
         height: 450px;
         padding: 5px;
         background-color: var(--cor2);
@@ -206,7 +206,7 @@ article.conteudo > p {
         background-color: var(--cor3);
         text-decoration: none;
         color: black;
-        overflow: hidden;
+        overflow: scroll;
     }
 
     section > #gestante {
@@ -231,7 +231,7 @@ article.conteudo > p {
     }
 
     nav#caminho {
-        width: 80%;
+        width: 100%;
         height: 100%;
         margin-left: 50px;
     }
@@ -302,7 +302,10 @@ article.conteudo > p {
         width: 100%;
         position: absolute; 
         display: inline;
+        overflow: scroll;
     }
 }
+
+
 
 
