--- a/style/style.css
+++ b/style/style.css
@@ -226,7 +226,7 @@ article.conteudo > p {
     section > #hospital {
         height: 80px;
         position: relative;
-        margin-left: 65%;
+        margin-left: 250px;
         margin-top: 30px;
     }
 
