--- a/style/style.css
+++ b/style/style.css
@@ -228,6 +228,24 @@ article.conteudo > p {
     text-indent: 2em;
 }
 
+h1#sobrenos {
+    font-size: 3em;
+}
+
+.pessoa {
+    margin: 50px;
+    padding: 15px;
+}
+
+.pessoa > img {
+    border-radius: 10px;
+}
+
+.pessoa > h1 {
+    font-size: 1.6em;
+    margin-top: 10px;
+}
+
 @media only screen and (max-width: 500px) {
     body {
         overflow-y: scroll ;
@@ -248,7 +266,6 @@ article.conteudo > p {
     #menumobile {
         display: block;
         width: 100%;
-        height: 450px;
         padding: 5px;
         background-color: var(--cor2);
     }
@@ -358,7 +375,19 @@ article.conteudo > p {
         width: 100%;
         position: absolute; 
         display: inline;
-        overflow: hidden;
+        overflow: scroll;
+    }
+
+    .pessoa {
+        margin: 50px;
+        padding: 15px;
+    }
+    
+    .pessoa > img {
+        height: 100px;
+        border-radius: 10px;
+        margin-bottom: 50px;
+        transform: scale(2);
     }
 }
 
