--- a/style/style.css
+++ b/style/style.css
@@ -72,7 +72,6 @@ header > #cegonha{
 
 #menulateral {
     display: inline-block;
-    height: 100%;
     width: 20%;
     padding: 5px;
     top: 0px;
@@ -219,8 +218,16 @@ article.conteudo {
 }
 
 article.conteudo > h1 {
+    font-size: 2em;
     text-align: center;
 }
+
+article.conteudo > h2 {
+    font-size: 1.2em;
+    text-align: center;
+}
+
+
 
 article.conteudo > p {
     margin-top: 20px;
@@ -375,7 +382,6 @@ h1#sobrenos {
         width: 100%;
         position: absolute; 
         display: inline;
-        overflow: scroll;
     }
 
     .pessoa {
